/cp 2016-02-11  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/68726
	* pt.c (lookup_template_class_1): Check tsubst return value for
	error_mark_node.

/testsuite
2016-02-11  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/68726
	* g++.dg/cpp0x/pr68726.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@233340 138bc75d-0d04-0410-961f-82ee72b054a4